fixed sponsors logo not showing for small tablet

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1831,6 +1831,12 @@ a.back-to-top:focus {
 	color: #ec2324;
 }
 
+@media screen and (max-width: 991px) {
+	.footer-area .footer-logo {
+		width: 80%;
+	}
+}
+
 .image-list {
 	padding: 0;
 	margin: 0;
